waybar: fix pulseaudio mute icon shift, tweak window, date

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -42,3 +42,9 @@ window#waybar {
   /* Need to offset some stuff to account for the hyprland outer gap */
   margin-left: 4px;
 }
+
+/* Icon alignment */
+#pulseaudio.muted {
+  margin-top: 2px;
+  margin-left: 8px;
+}
